SUBDIRS = include libssap_parse_n_gen libm3_parse_n_gen src etc libutil
if WITHSIB
SUBDIRS += libsib
endif

#if UNIT_TESTS
#SUBDIRS += unit_tests
#endif

EXTRA_DIST = \
	debian/changelog \
	debian/libwhiteboard.install \
	debian/libwhiteboard-dev.install \
	debian/compat \
	debian/control \
	debian/copyright \
	debian/rules \
	debian/docs \
	autogen.sh
