pkgconfigdir = @libdir@/pkgconfig
pkgconfig_DATA = $(PACKAGE).pc
pkgconfig_DATA += libssap_parse_n_gen.pc
pkgconfig_DATA += libm3_parse_n_gen.pc
pkgconfig_DATA += libwhiteboard-util.pc
pkgconfig_DATA += libsib.pc

#docsdir = @datadir@/doc/@PACKAGE@
#dist_docs_DATA = \
#	@top_srcdir@/ChangeLog \
#	@top_srcdir@/COPYING \
#	@top_srcdir@/Doxyfile

#if WITH_DOCS

#devdocsdir = @datadir@/doc/@PACKAGE@-dev
#dist_devdocs_DATA = \
#	$(top_srcdir)/COPYING \
#	whiteboard-ui-howto.txt

#devdocsdoxygendir = @datadir@/doc/@PACKAGE@-dev/doxygen
#dist_devdocsdoxygen_DATA = \
#	$(top_srcdir)/doxygen/html/*

#@top_srcdir@/doxygen/html/*:
#	cd @top_srcdir@ && doxygen Doxyfile
#endif
